--- a/style.css
+++ b/style.css
@@ -35,6 +35,15 @@ body {
     top: 20px;
 } */
 
+.container-fluid .birds {
+    height: 100px;
+    width: 200px;
+    animation-name: birdsfly;
+    animation-duration: 60s;
+    animation-delay: 40s;
+    animation-iteration-count: infinite;
+}
+
 .container-fluid .cloud1 {
     position: absolute;
     top: 30px;
@@ -69,7 +78,7 @@ body {
 .container-fluid .cloud3:hover {
     transform: scale(1.05);
     transition: all 0.5s ease-out;
-    /* transition-timing-function: ease-in-out; */
+    
 }
 
 .container-fluid .cloud5 {
@@ -127,8 +136,8 @@ body {
 
 .container-fluid .cloud8:hover {
     transform: scale(1.06);
-    transition: all 1s ease-out;
-    /* transition-timing-function: ease-in-out; */
+    transition: all 1s;
+    transition-timing-function: linear;
 }
 
 .input-temp {
@@ -149,21 +158,26 @@ body {
 
 .input-temp:hover {
     box-shadow: 10px 10px 15px rgba(2, 2, 2, 0.212);
+    transform: scale(1.1);
 }
 
 .input-temp input {
     padding-left: 20px;
-    height: 60px;
+    height: 50px;
     width: 300px; 
     border-radius: 30px;
     transition: all 1s;
+    /* transition-delay: 5s; */
+    border: 1px solid rgba(126, 126, 126, 0.612);
     background: linear-gradient(0deg, #b090d0 0%, #fcfdff );
     box-shadow: 4px 4px 12px 0px rgb(200 190 229 / 52%) inset, -4px -4px 12px 0px rgba(210, 173, 105, 0.641)inset; 
+    
 }
 
 .input-temp input:hover {
     transition: width 1s;
     width: 400px;
+    box-shadow: 5px 5px 10px 5px rgba(15, 14, 14, 0.258);
 }
 
 
@@ -187,3 +201,7 @@ body {
     100% { left:100%; }
 }
 
+@keyframes birdsfly {
+    0%   { left:-300px; }
+    100% { right:100%; }
+}
